--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "ตรวจสอบให้แน่ใจว่าบลูทูธของคุณเปิดอยู่",
     "CL_DV_PIND_accessory_firmware_update": "อัพเดตเฟิร์มแวร์อุปกรณ์เสริม",
     "CL_CF_CS_ble_scan_not_list": "หากไม่มีอุปกรณ์ของคุณอยู่ในรายการ คุณสามารถคลิก 'ลองอีกครั้ง' เพื่อค้นหาอีกครั้ง หรือคลิก 'ถัดไป' เพื่อกำหนดค่าเครือข่ายในอีกวิธีหนึ่ง",
-    "CL_CF_CS_ble_scan_have_not_found": "เราไม่พบอุปกรณ์ใดๆ บนบลูทูธ คุณสามารถคลิก 'ลองอีกครั้ง' เพื่อค้นหาอีกครั้ง หรือคลิก 'ถัดไป' เพื่อกำหนดค่าเครือข่ายในอีกวิธีหนึ่ง",
+    "CL_CF_CS_ble_scan_have_not_found": "เราไม่พบอุปกรณ์ใด ๆ บนบลูทูธ คุณสามารถคลิก 'ลองอีกครั้ง' เพื่อค้นหาอีกครั้ง หรือกําหนดค่าเครือข่ายด้วยวิธีอื่น",
     "CL_DV_WM_pump_cleaning": "ปั๊มทำความสะอาด...",
     "CL_DV_WM_autodoes_tip": "เปิดใช้คุณสมบัตินี้แล้วเครื่องของคุณจะจ่ายผงซักฟอกและน้ำยาปรับผ้านุ่มอย่างชาญฉลาดในขณะที่คุณซักผ้า",
     "CL_DV_WM_detergent_department_key": "ช่องเติมผงซักฟอก",
@@ -4267,5 +4267,12 @@
     "program_management_unable_to_hide": "ไม่สามารถซ่อนได้",
     "program_management_unable_to_hide_desc": "นี่เป็นโปรแกรมสุดท้ายที่มองเห็นได้และจะต้องมองเห็นอย่างน้อยหนึ่งโปรแกรม",
     "CL_CF_FM_set_deadline": "กำหนดเส้นตาย",
-    "CL_CF_FM_expiry_date_must_be_selected": "ต้องเลือกวันหมดอายุ"
+    "CL_CF_FM_expiry_date_must_be_selected": "ต้องเลือกวันหมดอายุ",
+    "CL_CF_FM_add_custom_food_desc": "เพิ่มรายการที่กำหนดเองใหม่",
+    "CL_CF_FM_delete_selected_items": "ลบรายการที่เลือก",
+    "CL_CF_FM_delete_selected": "ลบรายการที่เลือก",
+    "CL_DV_HOB_residual_heat_content": "บริเวณทำอาหารยังร้อนอยู่ ระวังอย่าให้โดน",
+    "CL_CF_FM_add_custom_food": "เพิ่มอาหารที่ไม่มีในห้องสมุด",
+    "air_care_temp_title": "มาตรฐานการประเมินอุณหภูมิ:",
+    "air_care_temp_c": "ดี: 17 < T < 27℃ \\n ปกติ: 10≤T≤17°C, 27≤T≤30°C \\n ไม่ดี: T < 10°CT > 30°C"
 }
