--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -2185,7 +2185,7 @@
     "ac_checking_new": "檢測中",
     "last_exam": "上次检测",
     "ac_result": "结果",
-    "add_a_favorite": "添加喜爱",
+    "add_a_favorite": "添加最爱",
     "add_a_schedule": "添加计划",
     "exam_again": "重新检测",
     "ac_new_temperature_unit": "溫度單位",
@@ -2430,7 +2430,7 @@
     "logout_tips": "確定要登出嗎？",
     "fridge_child_lock_open_tips": "儿童锁开启后，冰箱的触控板将锁定，出水/冰功能将被禁用。",
     "want_scan_code_tips": "我想掃碼",
-    "tri_name_key": "三联供采暖机",
+    "tri_name_key": "熱泵戶式水機",
     "water_set_key": "水温设置",
     "f_e_fan_fault_tip": "外风机故障",
     "zone_water_key": "区域1水温",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "確保您的藍牙已開啟。",
     "CL_DV_PIND_accessory_firmware_update": "配件韌體更新",
     "CL_CF_CS_ble_scan_not_list": "如果您的裝置未列出，您可以按一下「重試」重新搜索，或按一下「下一步」以其他方式設定網路。",
-    "CL_CF_CS_ble_scan_have_not_found": "我們尚未在藍牙上找到任何裝置。",
+    "CL_CF_CS_ble_scan_have_not_found": "我們還沒有找到任何藍牙設備。您可以點擊「重试」重新搜索，或以其他方式配置網路。",
     "CL_DV_WM_pump_cleaning": "清洗幫浦...",
     "CL_DV_WM_autodoes_tip": "啟用此功能，您的設備將在您洗衣服時智慧地分配洗滌劑和織物柔軟劑。",
     "CL_DV_WM_detergent_department_key": "洗滌劑室",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "無法隱藏",
     "program_management_unable_to_hide_desc": "這是最後一個可見程序，並且至少有一個程序必須保持可見。",
     "CL_CF_FM_set_deadline": "設定截止日期",
-    "CL_CF_FM_expiry_date_must_be_selected": "必須選擇到期日"
+    "CL_CF_FM_expiry_date_must_be_selected": "必須選擇到期日",
+    "CL_CF_FM_add_custom_food_desc": "新增的客製化項目",
+    "CL_CF_FM_delete_selected_items": "刪除所選項目",
+    "CL_CF_FM_delete_selected": "刪除所選內容",
+    "CL_DV_HOB_residual_heat_content": "烹飪區仍然很熱。小心不要碰它。",
+    "CL_CF_FM_add_custom_food": "增加圖書館未包含的食物",
+    "air_care_temp_title": "溫度評價標準：",
+    "air_care_temp_c": "良好：17 < T < 27℃ \\n正常：10≤T≤17°C，27≤T≤30°C \\n不良：T < 10°CT > 30°C",
+    "air_care_hum_title": "濕度評估標準：",
+    "air_care_hum_tips": "良好：H < 70% \\n正常：70≤H≤80% \\n不良：H＞80%",
+    "air_care_temp_f": "良好: 62.6 < T < 80.6°F \\n正常: 50≤T≤62.6°F,80.6≤T≤86°F \\n不好: T＜50°T T＞86°F"
 }
