--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Уверите се да је ваш блуетоотх укључен.",
     "CL_DV_PIND_accessory_firmware_update": "Ажурирање фирмвера додатне опреме",
     "CL_CF_CS_ble_scan_not_list": "Ако ваш уређај није на листи, можете кликнути на „ПОКУШАЈ ПОНОВНО“ да бисте поново претражили или кликните на „ДАЉЕ“ да бисте конфигурисали мрежу на други начин.",
-    "CL_CF_CS_ble_scan_have_not_found": "Нисмо пронашли ниједан уређај на блуетоотх-у. Можете да кликнете на 'ПОКУШАЈ ПОНОВНО' да претражите поново или да кликнете на 'ДАЉЕ' да конфигуришете мрежу на други начин.",
+    "CL_CF_CS_ble_scan_have_not_found": "Нисмо пронашли ниједан уређај на блуетоотх-у. Можете да кликнете на „ПОКУШАЈ ПОНОВНО“ да поново претражите или да конфигуришете мрежу на други начин.",
     "CL_DV_WM_pump_cleaning": "Пумпа за чишћење...",
     "CL_DV_WM_autodoes_tip": "Омогућите ову функцију и ваш уређај ће паметно дозирати детерџент и омекшивач док перете веш.",
     "CL_DV_WM_detergent_department_key": "ОДЈЕЉАК ЗА ДЕТЕРЏЕНТ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Није могуће сакрити",
     "program_management_unable_to_hide_desc": "Ово је последњи видљиви програм и најмање један програм мора остати видљив.",
     "CL_CF_FM_set_deadline": "Одредите рок",
-    "CL_CF_FM_expiry_date_must_be_selected": "Датум истека мора бити изабран"
+    "CL_CF_FM_expiry_date_must_be_selected": "Датум истека мора бити изабран",
+    "CL_CF_FM_add_custom_food_desc": "Додајте нову прилагођену ставку",
+    "CL_CF_FM_delete_selected_items": "Избришите изабране ставке",
+    "CL_CF_FM_delete_selected": "Избриши изабрано",
+    "CL_DV_HOB_residual_heat_content": "Зона за кување је још врућа. Пазите да га не додирнете.",
+    "CL_CF_FM_add_custom_food": "Додајте храну која није укључена у библиотеку",
+    "air_care_temp_title": "Стандард за процену температуре:",
+    "air_care_temp_c": "Добро: 17 < Т < 27℃ \\n Нормално: 10≤Т≤17°Ц, 27≤Т≤30°Ц \\n Није добро: Т < 10°ЦТ > 30°Ц",
+    "air_care_hum_title": "Стандард за процену влажности:",
+    "air_care_hum_tips": "Добро: Х < 70% \\n Нормално: 70≤Х≤80% \\n Није добро: Х＞80%",
+    "air_care_temp_f": "Добро: 62,6 < Т < 80,6℉ \\n Нормално: 50≤Т≤62,6℉,80,6≤Т≤86℉ \\n Није добро: Т＜50℉ Т＞86℉"
 }
