--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Συνδεδεμένο και ενεργοποιημένο;\nΤο Wi-Fi είναι ενεργοποιημένο και συνδεδεμένο;\nΟ κωδικός πρόσβασης Wi-Fi δεν έχει αλλάξει πρόσφατα.",
     "dont_remind_again_uppercase": "ΜΗΝ ΘΥΜΙΣΟΥΜΕ ΞΑΝΑ",
     "storage_tips_title": "Συμβουλές αποθήκευσης:",
-    "heat_pump_oem": "Σειρά PRO ΖΝΧ",
+    "heat_pump_oem": "Ζεστό νερό χρήσης σταθερής ταχύτητας",
     "td22_drying_empty_water_tank": "Στέγνωμα – Άδειο δοχείο νερού",
     "td22_drying_paused": "Το στέγνωμα σταμάτησε",
     "td22_drying_finished": "Το στέγνωμα ολοκληρώθηκε",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Βεβαιωθείτε ότι το bluetooth είναι ενεργοποιημένο.",
     "CL_DV_PIND_accessory_firmware_update": "Ενημέρωση υλικολογισμικού αξεσουάρ",
     "CL_CF_CS_ble_scan_not_list": "Εάν η συσκευή σας δεν εμφανίζεται στη λίστα, μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
-    "CL_CF_CS_ble_scan_have_not_found": "Δεν βρήκαμε καμία συσκευή στο bluetooth. Μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
+    "CL_CF_CS_ble_scan_have_not_found": "Δεν βρήκαμε καμία συσκευή στο bluetooth. Μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για να αναζητήσετε ξανά ή να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
     "CL_DV_WM_pump_cleaning": "Αντλία καθαρισμού...",
     "CL_DV_WM_autodoes_tip": "Ενεργοποιήστε αυτήν τη λειτουργία και η συσκευή σας θα διανέμει έξυπνα απορρυπαντικό και μαλακτικό ενώ πλένετε τα ρούχα σας.",
     "CL_DV_WM_detergent_department_key": "ΘΗΚΗ ΑΠΟΡΡΥΠΑΝΤΙΚΟΥ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Δεν είναι δυνατή η απόκρυψη",
     "program_management_unable_to_hide_desc": "Αυτό είναι το τελευταίο ορατό πρόγραμμα και τουλάχιστον ένα πρόγραμμα πρέπει να παραμένει ορατό.",
     "CL_CF_FM_set_deadline": "Ορίστε μια προθεσμία",
-    "CL_CF_FM_expiry_date_must_be_selected": "Πρέπει να επιλεγεί η ημερομηνία λήξης"
+    "CL_CF_FM_expiry_date_must_be_selected": "Πρέπει να επιλεγεί η ημερομηνία λήξης",
+    "CL_CF_FM_add_custom_food_desc": "Προσθέστε ένα νέο προσαρμοσμένο στοιχείο",
+    "CL_CF_FM_delete_selected_items": "Διαγραφή επιλεγμένων αντικειμένων",
+    "CL_CF_FM_delete_selected": "Διαγραφή επιλεγμένων",
+    "CL_DV_HOB_residual_heat_content": "Η ζώνη μαγειρέματος είναι ακόμα ζεστή. Προσέξτε να μην το αγγίξετε.",
+    "CL_CF_FM_add_custom_food": "Προσθέστε τρόφιμα που δεν περιλαμβάνονται στη βιβλιοθήκη",
+    "air_care_temp_title": "Πρότυπο αξιολόγησης θερμοκρασίας:",
+    "air_care_temp_c": "Καλή: 17 < T < 27℃ \\n Κανονική: 10≤T≤17°C, 27≤T≤30°C \\n Όχι καλή: T < 10°CT > 30°C",
+    "air_care_hum_title": "Πρότυπο αξιολόγησης υγρασίας:",
+    "air_care_hum_tips": "Καλό: H < 70% \\n Κανονικό: 70≤H≤80% \\n Όχι καλό: H＞80%",
+    "air_care_temp_f": "Καλό: 62,6 < T < 80,6℉ \\n Κανονικό: 50≤T≤62,6℉,80,6≤T≤86℉ \\n Όχι καλό: T＜50℉ T＞86℉"
 }
