--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Branché et allumé;\nLe Wi-Fi est activé et connecté;\nLe mot de passe Wi-Fi n'a pas été modifié récemment.",
     "dont_remind_again_uppercase": "NE RAPPELEZ PLUS",
     "storage_tips_title": "Conseils de stockage :",
-    "heat_pump_oem": "Série PRO DHW",
+    "heat_pump_oem": "Vitesse fixe ECS",
     "td22_drying_empty_water_tank": "Séchage – Réservoir d'eau vide",
     "td22_drying_paused": "Séchage en pause",
     "td22_drying_finished": "Séchage terminé",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Assurez-vous que votre Bluetooth est activé.",
     "CL_DV_PIND_accessory_firmware_update": "Mise à jour du firmware des accessoires",
     "CL_CF_CS_ble_scan_not_list": "Si votre appareil n'est pas répertorié, vous pouvez cliquer sur « RÉESSAYER » pour effectuer une nouvelle recherche ou cliquer sur « SUIVANT » pour configurer le réseau d'une autre manière.",
-    "CL_CF_CS_ble_scan_have_not_found": "Nous n'avons trouvé aucun appareil compatible Bluetooth. Vous pouvez cliquer sur « RÉESSAYER » pour effectuer une nouvelle recherche ou cliquer sur « SUIVANT » pour configurer le réseau d'une autre manière.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nous n'avons trouvé aucun appareil sur bluetooth. Vous pouvez cliquer sur 'TRY AGAIN' pour effectuer une nouvelle recherche, ou configurer le réseau d'une autre manière.",
     "CL_DV_WM_pump_cleaning": "Pompe de nettoyage...",
     "CL_DV_WM_autodoes_tip": "Activez cette fonction et votre appareil distribuera intelligemment du détergent et de l'assouplissant pendant que vous faites votre lessive.",
     "CL_DV_WM_detergent_department_key": "COMPARTIMENT À DÉTERGENT",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Impossible de se cacher",
     "program_management_unable_to_hide_desc": "Il s'agit du dernier programme visible et au moins un programme doit rester visible.",
     "CL_CF_FM_set_deadline": "Fixer une date limite",
-    "CL_CF_FM_expiry_date_must_be_selected": "La date d'expiration doit être sélectionnée"
+    "CL_CF_FM_expiry_date_must_be_selected": "La date d'expiration doit être sélectionnée",
+    "CL_CF_FM_add_custom_food_desc": "Ajouter un nouvel élément personnalisé",
+    "CL_CF_FM_delete_selected_items": "Supprimer les éléments sélectionnés",
+    "CL_CF_FM_delete_selected": "Supprimer la sélection",
+    "CL_DV_HOB_residual_heat_content": "La zone de cuisson est encore chaude. Veillez à ne pas la toucher.",
+    "CL_CF_FM_add_custom_food": "Ajouter des aliments non inclus dans la bibliothèque",
+    "air_care_temp_title": "Norme d’évaluation de la température :",
+    "air_care_temp_c": "Bon : 17 < T < 27℃ \\n Normal : 10≤T≤17°C, 27≤T≤30°C \\n Pas bon : T < 10°CT > 30°C",
+    "air_care_hum_title": "Norme d'évaluation de l'humidité :",
+    "air_care_hum_tips": "Bon : H < 70 % \\n Normal : 70≤H≤80 % \\n Pas bon : H＞80 %",
+    "air_care_temp_f": "Bon : 62,6 < T < 80,6℉ \\n Normal : 50≤T≤62,6℉,80,6≤T≤86℉ \\n Pas bon : T＜50℉ T＞86℉"
 }
