--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "מחובר ומופעל;\nה-Wi-Fi מופעל ומחובר;\nסיסמת ה-Wi-Fi לא שונתה לאחרונה.",
     "dont_remind_again_uppercase": "אל תזכיר שוב",
     "storage_tips_title": "עצות אחסון:",
-    "heat_pump_oem": "סדרת PRO DHW",
+    "heat_pump_oem": "DHW במהירות קבועה",
     "td22_drying_empty_water_tank": "ייבוש - מיכל מים ריק",
     "td22_drying_paused": "הייבוש הושהה",
     "td22_drying_finished": "הייבוש הסתיים",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "ודא שה-Bluetooth שלך מופעל.",
     "CL_DV_PIND_accessory_firmware_update": "עדכון קושחת אביזרים",
     "CL_CF_CS_ble_scan_not_list": "אם המכשיר שלך אינו מופיע ברשימה, תוכל ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
-    "CL_CF_CS_ble_scan_have_not_found": "לא מצאנו שום מכשיר ב-Bluetooth. אתה יכול ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
+    "CL_CF_CS_ble_scan_have_not_found": "לא מצאנו שום מכשיר ב-Bluetooth. אתה יכול ללחוץ על 'נסה שוב' כדי לחפש שוב, או להגדיר את הרשת בדרך אחרת.",
     "CL_DV_WM_pump_cleaning": "משאבת ניקוי...",
     "CL_DV_WM_autodoes_tip": "הפעל תכונה זו והמכשיר שלך יוציא בצורה חכמה חומר ניקוי ומרכך כביסה בזמן שאתה מכבס.",
     "CL_DV_WM_detergent_department_key": "תא חומרי ניקוי",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "לא מצליח להסתיר",
     "program_management_unable_to_hide_desc": "זוהי התוכנית הגלויה האחרונה ולפחות תוכנית אחת חייבת להיות גלויה.",
     "CL_CF_FM_set_deadline": "קבע תאריך יעד",
-    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה"
+    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה",
+    "CL_CF_FM_add_custom_food_desc": "הוסף פריט מותאם אישית חדש",
+    "CL_CF_FM_delete_selected_items": "מחק פריטים נבחרים",
+    "CL_CF_FM_delete_selected": "מחק את נבחרות",
+    "CL_DV_HOB_residual_heat_content": "אזור הבישול עדיין חם. היזהר לא לגעת בו.",
+    "CL_CF_FM_add_custom_food": "הוסף מזון שאינו כלול בספרייה",
+    "air_care_temp_title": "תקן להערכת טמפרטורה:",
+    "air_care_temp_c": "טוב: 17 < T < 27℃ \\n רגיל: 10≤T≤17°C, 27≤T≤30°C \\n לא טוב: T < 10°CT > 30°C",
+    "air_care_hum_title": "תקן להערכת לחות:",
+    "air_care_hum_tips": "טוב: H < 70% \\n רגיל: 70≤H≤80% \\n לא טוב: H~80%",
+    "air_care_temp_f": "טוב: 62.6 < T < 80.6℉ \\n רגיל: 50≤T≤62.6℉,80.6≤T≤86℉ \\n לא טוב: T＜50℉ T＞86℉"
 }
