--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Csatlakoztatva és bekapcsolva;\nA Wi-Fi aktiválva és csatlakoztatva van;\nA Wi-Fi jelszó nemrégiben nem változott.",
     "dont_remind_again_uppercase": "NE EMLÉKEZTESSEN ÚJRA",
     "storage_tips_title": "Tárolási tippek:",
-    "heat_pump_oem": "PRO sorozat HMV",
+    "heat_pump_oem": "Fix fordulatszámú használati melegvíz",
     "td22_drying_empty_water_tank": "Szárítás – Ürítse ki a víztartályt",
     "td22_drying_paused": "A szárítás szünetel",
     "td22_drying_finished": "A szárítás befejeződött",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Győződjön meg arról, hogy a Bluetooth be van kapcsolva.",
     "CL_DV_PIND_accessory_firmware_update": "Tartozék firmware frissítés",
     "CL_CF_CS_ble_scan_not_list": "Ha eszköze nem szerepel a listában, kattintson az „ÚJRAPRÓBÁLÁS” gombra az újbóli kereséshez, vagy kattintson a „KÖVETKEZŐ” gombra a hálózat más módon történő konfigurálásához.",
-    "CL_CF_CS_ble_scan_have_not_found": "Nem találtunk Bluetooth-eszközt. Kattintson az „ÚJRAPRÓBÁLÁS” gombra az újbóli kereséshez, vagy kattintson a „KÖVETKEZŐ” gombra a hálózat más módon történő konfigurálásához.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nem találtunk semmilyen eszközt a Bluetooth-on. Kattintson a \"PRÓBÁLJA ÚJRA\" gombra az újbóli kereséshez, vagy más módon konfigurálhatja a hálózatot.",
     "CL_DV_WM_pump_cleaning": "Szivattyú tisztítása...",
     "CL_DV_WM_autodoes_tip": "Engedélyezze ezt a funkciót, és készüléke okosan adagolja a mosószert és az öblítőt, miközben Ön mos.",
     "CL_DV_WM_detergent_department_key": "MOSÓSZERREKESZ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Képtelen elrejteni",
     "program_management_unable_to_hide_desc": "Ez az utolsó látható program, és legalább egy programnak láthatónak kell lennie.",
     "CL_CF_FM_set_deadline": "Állítson be határidőt",
-    "CL_CF_FM_expiry_date_must_be_selected": "A lejárati dátumot ki kell választani"
+    "CL_CF_FM_expiry_date_must_be_selected": "A lejárati dátumot ki kell választani",
+    "CL_CF_FM_add_custom_food_desc": "Új testreszabott elem hozzáadása",
+    "CL_CF_FM_delete_selected_items": "Kijelölt elemek törlése",
+    "CL_CF_FM_delete_selected": "Kijelölt törlése",
+    "CL_DV_HOB_residual_heat_content": "A főzőzóna még mindig forró. Ügyeljen arra, hogy ne érintse meg.",
+    "CL_CF_FM_add_custom_food": "Adjon hozzá olyan ételt, amely nem szerepel a könyvtárban",
+    "air_care_temp_title": "Hőmérséklet értékelési szabvány:",
+    "air_care_temp_c": "Jó: 17 < T < 27 ℃ \\n Normál: 10≤T≤17°C, 27≤T≤30°C \\n Nem jó: T < 10°CT > 30°C",
+    "air_care_hum_title": "Páratartalom értékelési szabvány:",
+    "air_care_hum_tips": "Jó: H < 70% \\n Normál: 70≤H≤80% \\n Nem jó: H＞80%",
+    "air_care_temp_f": "Jó: 62,6 < T < 80,6℉ \\n Normál: 50≤T≤62,6℉,80,6≤T≤86℉ \\n Nem jó: T＜50℉ T＞86℉"
 }
