--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Қосылған және қосулы;\nWi-Fi белсенді және қосылған;\nWi-Fi құпия сөзі жақында өзгертілген жоқ.",
     "dont_remind_again_uppercase": "ҚАЙТА ЕСКЕРТУШЫЗ",
     "storage_tips_title": "Сақтау кеңестері:",
-    "heat_pump_oem": "PRO сериясы DHW",
+    "heat_pump_oem": "Тұрақты жылдамдықты DHW",
     "td22_drying_empty_water_tank": "Кептіру – су ыдысын босатыңыз",
     "td22_drying_paused": "Кептіру тоқтатылды",
     "td22_drying_finished": "Кептіру аяқталды",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Bluetooth қосулы екеніне көз жеткізіңіз.",
     "CL_DV_PIND_accessory_firmware_update": "Қосымша микробағдарламаны жаңарту",
     "CL_CF_CS_ble_scan_not_list": "Құрылғыңыз тізімде жоқ болса, қайта іздеу үшін «ҚАЙТА ОРЫНДАУ» түймесін басыңыз немесе желіні басқа жолмен конфигурациялау үшін «КЕЛЕСІ» түймесін басыңыз.",
-    "CL_CF_CS_ble_scan_have_not_found": "Біз bluetooth арқылы ешбір құрылғыны таппадық. Қайтадан іздеу үшін «ҚАЙТАЛАП КӨРУ» түймесін басыңыз немесе желіні басқа жолмен конфигурациялау үшін «КЕЛЕСІ» түймесін басыңыз.",
+    "CL_CF_CS_ble_scan_have_not_found": "Біз bluetooth арқылы ешбір құрылғыны таппадық. Қайта іздеу немесе желіні басқа жолмен конфигурациялау үшін «ҚАЙТА ОРЫНДАУ» түймесін басуға болады.",
     "CL_DV_WM_pump_cleaning": "Тазалау сорғы...",
     "CL_DV_WM_autodoes_tip": "Бұл мүмкіндікті қосыңыз, сонда құрылғы кір жуу кезінде жуғыш зат пен мата жұмсартқышты ақылды түрде таратады.",
     "CL_DV_WM_detergent_department_key": "ЖҰУ ЗАТ БӨЛІМІ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "Жасыру мүмкін емес",
     "program_management_unable_to_hide_desc": "Бұл соңғы көрінетін бағдарлама және кем дегенде бір бағдарлама көрінетін болуы керек.",
     "CL_CF_FM_set_deadline": "Мерзімді белгілеңіз",
-    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек"
+    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек",
+    "CL_CF_FM_add_custom_food_desc": "Жаңа теңшелген элементті қосыңыз",
+    "CL_CF_FM_delete_selected_items": "Таңдалған элементтерді жою",
+    "CL_CF_FM_delete_selected": "Таңдалғанды ​​жою",
+    "CL_DV_HOB_residual_heat_content": "Пісіру алаңы әлі ыстық. Оған қол тигізбеу үшін абай болыңыз.",
+    "CL_CF_FM_add_custom_food": "Кітапханаға кірмейтін тағамды қосыңыз",
+    "air_care_temp_title": "Температураны бағалау стандарты:",
+    "air_care_temp_c": "Жақсы: 17 < T < 27℃ \\n Қалыпты: 10≤T≤17°C, 27≤T≤30°C \\n Жақсы емес: T < 10°CT > 30°C",
+    "air_care_hum_title": "Ылғалдылықты бағалау стандарты:",
+    "air_care_hum_tips": "Жақсы: H < 70% \\n Қалыпты: 70≤H≤80% \\n Жақсы емес: H＞80%",
+    "air_care_temp_f": "Жақсы: 62,6 < T < 80,6℉ \\n Қалыпты: 50≤T≤62,6℉,80,6≤T≤86℉ \\n Жақсы емес: T＜50℉ T＞86℉"
 }
