--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "接続され、電源が入っています。\nWi-Fiが有効になっており、接続されています。\nWi-Fiパスワードは最近変更されていません。",
     "dont_remind_again_uppercase": "再表示しない",
     "storage_tips_title": "保管のヒント:",
-    "heat_pump_oem": "業務用ヒートポンプ",
+    "heat_pump_oem": "定速DHW",
     "td22_drying_empty_water_tank": "乾燥 – 水タンクを空にする",
     "td22_drying_paused": "乾燥を一時停止",
     "td22_drying_finished": "乾燥完了",
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Bluetoothがオンになっていることを確認してください。",
     "CL_DV_PIND_accessory_firmware_update": "アクセサリファームウェアアップデート",
     "CL_CF_CS_ble_scan_not_list": "デバイスがリストにない場合は、「再試行」をクリックして再度検索するか、「次へ」をクリックして別の方法でネットワークを構成してください。",
-    "CL_CF_CS_ble_scan_have_not_found": "Bluetooth 上のデバイスが見つかりません。「再試行」をクリックして再度検索するか、「次へ」をクリックして別の方法でネットワークを構成してください。",
+    "CL_CF_CS_ble_scan_have_not_found": "ブルートゥースのデバイスが見つかりません。TRY AGAIN」をクリックして再度検索するか、別の方法でネットワークを設定してください。",
     "CL_DV_WM_pump_cleaning": "洗浄ポンプ...",
     "CL_DV_WM_autodoes_tip": "この機能を有効にすると、洗濯中にデバイスが洗剤と柔軟剤をスマートに分配します。",
     "CL_DV_WM_detergent_department_key": "洗剤入れ",
@@ -4267,5 +4267,15 @@
     "program_management_unable_to_hide": "隠すことができない",
     "program_management_unable_to_hide_desc": "これは最後に表示されるプログラムであり、少なくとも 1 つのプログラムを表示したままにする必要があります。",
     "CL_CF_FM_set_deadline": "期限を設定する",
-    "CL_CF_FM_expiry_date_must_be_selected": "有効期限を選択する必要があります"
+    "CL_CF_FM_expiry_date_must_be_selected": "有効期限を選択する必要があります",
+    "CL_CF_FM_add_custom_food_desc": "新しいカスタマイズアイテムを追加する",
+    "CL_CF_FM_delete_selected_items": "選択したアイテムを削除",
+    "CL_CF_FM_delete_selected": "選択項目を削除",
+    "CL_DV_HOB_residual_heat_content": "調理ゾーンはまだ熱いので、触らないように注意してください。",
+    "CL_CF_FM_add_custom_food": "ライブラリに含まれていない食品を追加する",
+    "air_care_temp_title": "温度評価基準：",
+    "air_care_temp_c": "良好: 17 < T < 27℃ \\n正常: 10≤T≤17°C、27≤T≤30°C \\n不良: T < 10°CT > 30°C",
+    "air_care_hum_title": "湿度評価基準：",
+    "air_care_hum_tips": "良好: H < 70% \\n正常: 70≤H≤80% \\n不良: H＞80%",
+    "air_care_temp_f": "良好: 62.6 < T < 80.6℉ \\n正常: 50≤T≤62.6℉,80.6≤T≤86℉ \\n不良: T＜50℉ T＞86℉"
 }
